# Chessapeake

./: .gitignore  CMakeLists.txt  README.md  bleh  change-log.txt  init_moves.txt
inc/: AbstractPiece.h  Coord.h  FlatMatrix.h  GameInstance.h  GameInstance.h~  MoveParser.h  Pieces.h  constants.h  constants.h~  debug.h  helper.h  move.h
mac-build/: CMakeCache.txt  Makefile  cmake_install.cmake  out
mac-build/out.dSYM/Contents/Resources/DWARF/: out
src/: Bishop.cpp  Bishop.cpp~  Coord.cpp  Coord.cpp~  GameInstance.cpp  GameInstance.cpp~  King.cpp  King.cpp~  Knight.cpp  Knight.cpp~  MoveParser.cpp  Pawn.cpp  Pawn.cpp~  Queen.cpp  Rook.cpp  debug.cpp  helper.cpp  helper.cpp~  main.cpp
unix-build/: CMakeCache.txt  Makefile  cmake_install.cmake  out
win-build/: CMakeCache.txt  Makefile  cmake_install.cmake
